# libelifoot

./: .gitignore  .vimspector.json  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yaml  release.yaml
data/: espn.json  transfermarkt.json
docs/: equipa_format.txt
libelifoot/: __init__.py  libelifoot.py
libelifoot/api/: async_command.py  base_cmd.py  bulk_update.py  get_equipa_data.py  update.py  update_equipa.py  view.py
libelifoot/dto/: color.py  equipa.py
libelifoot/entity/: color.py  equipa.py  player.py
libelifoot/equipa/: builder.py  mapping.py
libelifoot/error/: data_not_available.py  header_not_found.py  not_found.py  not_provided.py  unknown_provider.py
libelifoot/event/: update_equipa_listener.py  view_equipa_listener.py
libelifoot/file/: equipa.py
libelifoot/parser/: base_parser.py  equipa.py  player.py
libelifoot/provider/: base_coach_provider.py  base_provider.py  base_roster_provider.py  coach_provider.py  espn.py  factory.py  mapping.py  roster_provider.py  transfermarkt.py
libelifoot/provider/coach/: coach_provider.py  factory.py  transfermarkt.py
libelifoot/provider/impl/: transfermarkt.py
libelifoot/provider/roster/: espn.py  factory.py  roster_provider.py  transfermarkt.py
libelifoot/serializer/: base_serializer.py  coach.py  equipa.py  player.py
libelifoot/util/: date.py  offset.py  player_position.py  sizes.py
samples/: bulk_update.py  get_equipa_data.py  update.py  view.py
src/api/: view.py
src/entity/: equipa.py
src/error/: data_not_available.py
src/parser/: player.py
src/provider/: espn.py  transfermarkt.py
src/serializer/: base_serializer.py  player.py
src/util/: crypto.py  player_position.py
tests/: fixtures.py  test_api.py  test_bulk_update.py  test_coach_serializer.py  test_crypto.py  test_date.py  test_equipa_builder.py  test_equipa_file_handler.py  test_equipa_parser.py  test_equipa_serializer.py  test_espn.py  test_libelifoot.py  test_player_parser.py  test_player_position.py  test_player_serializer.py  test_provider_factory.py  test_transfermarkt.py  test_update_equipa.py  test_view_equipa.py
tests/data/: INVALID_EQUIPA.EFT  VALID_EQUIPA.EFT
