[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "libelifoot"
version = "0.1.0"
requires-python = ">=3.7"
dependencies = [
    "requests",
    "Unidecode",
    "BeautifulSoup4"
]
authors = [{ name = "André L. C. Moreira", email = "andrelcmoreira@proton.me" }]
description = "Library to handle Elifoot equipas"
license = "LGPL-3.0-only"
license-files = ["LICEN[CS]E.*"]
readme = { file = "README.md", content-type = "text/markdown" }

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pylint"
]

[project.urls]
Repository = "https://github.com/andrelcmoreira/libelifoot.git"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
pythonpath = "."
testpaths = [
    "tests"
]
