[build-system]
requires = ["hatchling >= 1.26", "hatch-vcs >= 0.3.0"]
build-backend = "hatchling.build"

[project]
name = "libelifoot"
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
    "requests",
    "Unidecode",
    "BeautifulSoup4"
]
authors = [{ name = "André L. C. Moreira", email = "andrelcmoreira@proton.me" }]
description = "Library to handle Elifoot equipas"
license = "LGPL-3.0-only"
license-files = ["LICEN[CS]E.*"]
readme = { file = "README.md", content-type = "text/markdown" }

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pylint"
]

[tool.hatch.build]
include = [
    "libelifoot/*",
    "data/*"
]

[tool.hatch.version.raw-options]
version_scheme = "python-simplified-semver"
git_describe_command = ["git", "describe", "--tags"]

[tool.hatch.version]
source = "vcs"

[project.urls]
Repository = "https://github.com/andrelcmoreira/libelifoot.git"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
pythonpath = "."
testpaths = [
    "tests"
]
